<resources>
    <string name="app_name">Easy Notes</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="password_forgot">Forgot password</string>
    <string name="login_button">Login</string>
    <string name="register_textView">No account yet? Create one</string>
    <string name="or">Or</string>
    <string name="enter_fullname">Name</string>
    <string name="emailid">Email ID</string>
    <string name="fullname">Name</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="save">Save</string>
    <string name="already_acc">Already a account? Login</string>
    <string name="register_Name">Name</string>
    <string name="enter_Email">Email</string>
    <string name="pushpin">pushpin</string>
    <string name="edit">edit</string>
    <string name="notes">Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="logic">Logic not implemented yet</string>
    <string name="login_success">Login Successful</string>
    <string name="enter_correct_details">Enter Correct Details Or Register</string>
    <string name="invalid_password">invalid Password</string>
    <string name="password_field_condition">Password should not empty</string>
    <string name="invalid_email">invalid eMail</string>
    <string name="email_field_condition">Email should not empty</string>
    <string name="first_name">First name not entered</string>
    <string name="first_name_field">First name should not empty</string>
    <string name="format_invalid">invalid format</string>
    <string name="enter_mobile">Enter your mobile number</string>
    <string name="registration_success">Registration Successful</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="reminder">Reminder</string>
    <string name="logout">You have successfully logged out</string>
    <string name="logout_success">Logout successful..</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="notesadd_title_hint">Title</string>
    <string name="notesadd_content_hint">Add contents</string>
    <string name="field_msg">field should not be empty</string>
    <string name="login_msg">logging into app plz wait..</string>
    <string name="registration_msg">Registering data &#8230;</string>
    <string name="login_error_title">Error!</string>
    <string name="menu_search">Search note &#8230;</string>
    <string name="search_hint">Search note &#8230;</string>
    <string name="saved">Saved &#8230;</string>
    <string name="pined">pined &#8230;</string>
    <string name="date_time">MMMM dd, yyyy</string>
    <string name="time">hh:mm a</string>
    <string name="enter_registered_email">Enter your registered email id</string>
    <string name="sending_reset_instruction">Sending reset password instruction &#8230;</string>
    <string name="server_info">We have sent you instructions to reset your password!</string>
    <string name="failed_message">Failed to send reset email!</string>
    <string name="fail">Failed!</string>
    <string name="attach_images_title">Attach file from file</string>
    <string name="TextTakeCam">Take picture</string>
    <string name="TextTakeGal">Take picture from file</string>
    <string name="TextTitleDia">Set image</string>
    <string name="no_internet">No internet connection!</string>
    <string name="network_error_msg">It looks like your internet connection is off. Please turn it on and try again</string>
    <string name="registering">Registering data plz wait &#8230;</string>
    <string name="wrong_format">wrong format</string>
    <string name="splash_welcome_message">Every single moment is important,So keep track your things </string>
    <string name="fetching_data">Fetching data &#8230;</string>
    <string name="fetching_error">Error while fetching data</string>
    <string name="close_app">Close app?</string>
    <string name="facebook_app_id">414255355608534</string>
    <string name="fabric_key">1e0275c993a7b60bb8eb5521e71b464821743311</string>
    <string name="login_attempt_warn">Login attempt canceled</string>
    <string name="auth_failed">Authentication failed.</string>
    <string name="retry">Retry</string>
    <string name="error">Error</string>
    <string name="after_reg_login_fail_message">Login failed....</string>
    <string name="password_hint">Password too simple! It must have atleast 1 numeric and length should be 5&#8211;12</string>
    <string name="item_archieved">Item is archived</string>
    <string name="item_restored">Item is restored!</string>
    <string name="userData">userData</string>
    <string name="about">About</string>
    <string name="archive">Archive</string>
    <string name="trash">Trash</string>
    <string name="welcome">Welcome :</string>
    <string name="invalid_date">Invalid/Passed Date</string>
    <string name="reminder_date_set">Reminder set:</string>
    <string name="developer_name">Dev by:Laxmi Mishra</string>
    <string name="developer_mob">Mob No:7978787272</string>
    <string name="developer_email">Email:laxmi9945@gmail.com</string>
    <string name="note_add_loading_message">note is adding &#8230;</string>
    <string name="share_using">Share using</string>
    <string name="no_reminder">Notes with upcoming reminders appear here </string>
    <string name="empty_trash">No notes in Trash</string>
    <string name="archive_empty">Your archived notes appear here  </string>
    <string name="nav_header_default_email">laxmi9945@gmail.com</string>
    <string name="nav_header_default_name">ToDo App</string>
    <string name="forgot_pwd">Forgot Password?</string>
    <string name="forgot_pwd_instruction">We just need your registered Email id to sent you password reset instruction</string>
    <string name="enter_mail">Enter email</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="timeStamp">yyyyMMdd_HHmmss</string>
    <string name="getting_archive_notes">Fetching archive notes</string>
    <string name="getting_deleted_notes">Fetching deleted notes</string>
    <string name="ok">OK</string>
    <string name="item_deleted">Item is deleted</string>
    <string name="archive_failure">Archive failure</string>
    <string name="delete_failure">Delete failure</string>
    <string name="loading">Loading &#8230;</string>
    <string name="change_View">ChangeView</string>
    <string name="blue_name">test</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="choose_option">Select Option</string>
    <string name="camera_permission_error">Camera Permission error</string>
    <string name="select_img_from_gallery">Select Image From Gallery</string>
    <string name="custom_transition">transitionView</string>
    <string name="title">Select color</string>
    <string name="notes_add">Notes add</string>
    <string name="item_moved">item moved</string>
    <string name="item_moved_trash">item moved Trash</string>
    <string name="wait_logging_in">Wait u r logging into app</string>
    <string name="comma">,</string>
    <string name="reminder_time_set">Reminder time :</string>
    <string name="month_year_format">MMMM dd, yyyy</string>
    <string name="reminder_message">Your notification time is upon us.</string>
    <string name="share">Share Notes</string>
    <string name="banner_home_footer">ca-app-pub-8596147953662941/3388980915</string>


    <integer name="swing_anim_time">750</integer>
</resources>
