<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/jhjhj1" android:checkableBehavior="single">
        <item
            android:id="@+id/notes"
            android:icon="@drawable/ic_notes"
            android:title="@string/notes" />

        <item
            android:id="@+id/reminder"
            android:icon="@drawable/ic_reminder"
            android:title="@string/reminder"
            />
        <item
            android:id="@+id/archive"
            android:icon="@drawable/ic_archive"
            android:title="@string/archive" />
        <item
            android:id="@+id/trash"
            android:icon="@drawable/ic_trash_can"
            android:title="@string/trash" />
    </group>

    <group android:id="@+id/jhjhj" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/share" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/user"
            android:title="@string/about" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout_text" />
    </group>



</menu>
