<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:id="@+id/resetPwd_root_layout">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:orientation="vertical">
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pwd"
        android:textAlignment="center"
        android:layout_margin="15dp"/>
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textAlignment="center"
        android:text="@string/forgot_pwd_instruction"/>
    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/resetpassword_editText"
        android:hint="@string/enter_mail"
        android:layout_margin="15dp"
        />
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:id="@+id/reset_button"
        android:layout_height="wrap_content"
        android:text="@string/reset_pwd"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:layout_margin="15dp"/>
        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:id="@+id/back"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textAlignment="center"
            android:text="Back"
            android:background="@null"
            android:textAllCaps="false"/>
        </LinearLayout>

</RelativeLayout>