<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#e3e3e3">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@null"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:src="@drawable/add_pic"
        android:id="@+id/user_pic"
        />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            >
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:imeActionId="@+id/email_Edittext"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/profile"
        android:hint="@string/register_Name"
        android:padding="5dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            >
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/email_Edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:imeActionId="@+id/password_edittext"
        android:layout_marginTop="10dp"
        android:drawableStart="@drawable/email"
        android:hint="@string/enter_email"
        android:padding="5dp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            >
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeActionId="@+id/mobilenumber_edittext"
        android:layout_marginTop="10dp"
        android:maxLines="1"
        android:maxLength="10"
        android:inputType="textPassword"
        android:drawableStart="@drawable/password"
        android:hint="@string/enter_password"
        android:padding="5dp" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobileNo_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            >
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/mobilenumber_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:imeActionId="@+id/save_button"
        android:maxLines="1"
        android:hint="@string/mobilenumber"
        android:drawableStart="@drawable/mobile"
        android:inputType="number"
        android:padding="5dp"
        android:maxLength="10"
        />
        </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="30dp"
        android:text="@string/save" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/allreadyacc_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/already_acc"
        android:textAlignment="center"
        android:textColor="@color/colorRed"
        android:textSize="20dp" />

</LinearLayout>

</ScrollView>
    </LinearLayout>