<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:transitionName="@string/custom_transition"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/notes_add_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/back_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_action_back" />
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/note_push_pin_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@+id/color_pick_icon"
                android:foregroundGravity="right"
                android:src="@drawable/note_push_pin" />
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/color_pick_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toLeftOf="@+id/reminder_icon"
                android:foregroundGravity="right"
                android:src="@drawable/ic_action_color_pick" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/reminder_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_toLeftOf="@+id/save_icon"
                android:src="@drawable/ic_action_reminder_alert" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/save_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@drawable/ic_action_note_save" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/contentLayout_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/notes_add_toolbar"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/title_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/notesadd_mariginLeft"
                android:background="@android:color/transparent"
                android:hint="@string/notesadd_title_hint"
                android:textSize="@dimen/notesadd_textSize"
                android:textStyle="italic|bold"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/contentLayout"
            android:layout_below="@+id/titleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_5dp">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/content_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/notesadd_mariginLeft"
                android:background="@android:color/transparent"
                android:hint="@string/notesadd_content_hint"
                android:textCursorDrawable="@color/colorAccent"
                android:textSize="@dimen/notesadd_textSize"
                android:textStyle="italic" />

        </android.support.design.widget.TextInputLayout>


        <View
            android:id="@+id/viewlast"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@+id/time_layout"
            android:background="@color/bg_button_login" />
        <LinearLayout
            android:id="@+id/time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:weightSum="1">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/recenttime_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp" />
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comma"/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/time_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:id="@+id/comma"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text=","/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/reminder_textView"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textColor="#ff00"
                android:textSize="15sp" />
            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:id="@+id/reminderTime_comma"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text=","/>
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/reminderTime_textView"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:textColor="#ff00"
                android:textSize="15sp" />

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>